Fix hero text hidden behind navbar on zoom
- Change .mil-banner from height:100vh to min-height:100vh
- Add padding-top to .mil-banner-content to keep H1 below fixed frame
- Responsive padding for tablet/mobile breakpoints

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -57,6 +57,7 @@ preloader
 
     &.mil-hidden {
         pointer-events: none;
+        visibility: hidden;
     }
 }
 
@@ -203,12 +204,16 @@ frame
     }
 
     & .mil-frame-top {
+        background-color: $lt-95;
+        backdrop-filter: blur(8px);
+        padding: 0 60px;
+        height: 80px;
+
         @media screen and (max-width: 1200px) {
             height: 90px;
             background-color: $dt-95;
             border-bottom: solid 1px $lt-10;
             padding: 0 30px;
-            backdrop-filter: blur(8px);
 
             & .mil-logo {
                 color: $light;
@@ -651,20 +656,27 @@ banner
 
 ------------------------------------------- */
 .mil-banner {
-    height: 100vh;
+    min-height: 100vh;
 
     & .container {
         height: 100%;
+        min-height: 100vh;
         display: flex;
         align-items: flex-end;
     }
 
     & .mil-banner-content {
         width: 100%;
+        padding-top: 140px;
         padding-bottom: 120px;
         position: relative;
 
+        @media screen and (max-width: 1200px) {
+            padding-top: 120px;
+        }
+
         @media screen and (max-width: 992px) {
+            padding-top: 100px;
             padding-bottom: 90px;
         }
     }
